--- a/app/views/public/events/show.html.haml
+++ b/app/views/public/events/show.html.haml
@@ -168,7 +168,7 @@
               %tr
                 %th{scope:"row"} 楽曲
                 %td
-                  📢スクロールで全楽曲が確認できます
+                  📢「曲名」をクリックすると詳細情報が確認できます🎵
                   .event-songs-list
                     - @event.songs.each.with_index(1) do |song, i|
                       %div{id: "selected-#{song.id}"}
