--- a/app/views/public/events/_song_fields.html.haml
+++ b/app/views/public/events/_song_fields.html.haml
@@ -5,6 +5,8 @@
     .field
       = f.text_field :youtube_url, placeholder: "Youtubeの動画URL"
     .field
+      = f.text_area :introduction, placeholder: "楽曲の紹介文（意気込みや想いなど）", rows: 3, class: "form-control"
+    .field
       = link_to_remove_association '曲を削除', f, class: 'btn btn-danger js-song-remove-btn', data: { 'turbolinks': false, confirm: 'こちらの曲を削除します。よろしいですか？' }
     #join_parts.join-part-layout
       = f.fields_for :join_parts, id: 'js-join-part-field' do |join_part|
