--- a/app/views/public/events/_song_info.html.haml
+++ b/app/views/public/events/_song_info.html.haml
@@ -1,30 +1,7 @@
 .song-name
   【#{i}曲目】
-  = song.song_name
+  = link_to song.song_name, public_event_song_path(@event, song), class: "song-detail-link", data: { turbolinks: false }
   %br
-- if song.youtube_url.present?
-  - if song.youtube_url.present?
-    - if song.youtube_url.include?("youtube")
-      %iframe{
-        src: "https://www.youtube.com/embed/#{song.youtube_url[32..42]}",
-        allow: "accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture",
-        allowfullscreen: "",
-        frameborder: "0",
-        height: "315",
-        width: "100%"
-      }
-    - else
-      %iframe{
-        src: "https://www.youtube.com/embed/#{song.youtube_url.slice(17,11)}",
-        allow: "accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture",
-        allowfullscreen: "",
-        frameborder: "0",
-        height: "315",
-        width: "100%"
-      }
-- else
-  投稿された動画はありません。
-%br
 = link_to "今すぐ参加する!!", "#support-join-#{song.id}", data: { 'turbolinks': false }, class: "btn btn-sm btn-info mb-2"
 .join-member
   - song.join_parts.each do |join_part|
